--- a/style.css
+++ b/style.css
@@ -1,22 +1,81 @@
 body{
+    box-sizing: border-box;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: rgb(189, 220, 250);
+    background: rgb(172,182,229);
+    background: linear-gradient(114deg, rgba(172,182,229,1) 0%, rgba(134,253,232,1) 100%);
+    display: grid;     
+    grid-template-columns: 1fr 2fr 20px;
+    grid-template-rows: 1fr 1fr 1fr 20px;
 }
 /*DOG CARTOON
 ================================*/
 svg{
-    position: relative;
-    right: 12%;
-    top: 2%;
-    width: 50%;
-    height: 50%;
+    grid-column: 1 / 2; 
+    grid-row: 1 / 3;      
+    width: 90%;
+    height: 90%;
 }
 #closedEyes{
     opacity: 0;
 }
 button{
+    grid-column: 1 / 2;
     width: 30px;
     height: 30px;
+}
+
+/*PHOTO COLLEGE
+=================================*/
+.collegeContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    padding: 10px;     
+    border-radius: 50px;
+    background-color: #2F2E41;
+}
+.photoCollege{    
+    gap: 5px;   
+    width: 90%;
+    height: 90%;       
+    display: grid;  
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+     
+}
+img{
+   width: 100%;
+   height: 100%;
+}
+.dog1{
+    grid-column: 1 / 3;
+    grid-row: 1 / 3; 
+      
+}
+.dog2{
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+.dog3{
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+.dog4{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+.dog5{
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+.dog6{
+    grid-column: 3 / 5;
+    grid-row: 3 / 5;
+}
+.dog7, .dog8{
+   grid-row: 3 / 5;
 }
