--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     box-sizing: border-box;
     width: 100vw;
@@ -33,19 +36,19 @@ button{
     justify-content: center;
     align-items: center;
     grid-column: 2 / 3;
-    grid-row: 2 / 4;
-    padding: 10px;     
-    border-radius: 50px;
-    background-color: #2F2E41;
+    grid-row: 1 / 4;     
+    background-color: #ffffff;
+    border: solid 5px #ffffff;
+    box-shadow: 0px 0px 0px 6px #2F2E41;
+       
 }
-.photoCollege{    
+.photoCollege{      
     gap: 5px;   
-    width: 90%;
-    height: 90%;       
+    width: 100%;
+    height: 100%;       
     display: grid;  
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
-     
+    grid-template-columns: minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%);
+    grid-template-rows: minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%);    
 }
 img{
    width: 100%;
