input icon bug fixed

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input[type=text]{
     font-family: 'Poppins', sans-serif;
     color: #2F2E41;
     padding: 15px 0 15px 40px;
-    background-image: url(img/PawDesktop.png);
+    background-image: url(img/pawDesktop.png);
     background-repeat: no-repeat;
     background-position: 5px 3px;
     
