--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ svg{
 
 /*PHOTO COLLEGE
 =================================*/
-.collegeContainer{  
+.collegeContainer{    
     margin-top: 3%; 
     display: flex;
     justify-content: center;
@@ -49,12 +49,13 @@ svg{
     width: 100%;
     height: 100%;       
     display: grid;  
-    grid-template-columns: minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%);
-    grid-template-rows: minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%) minmax(auto, 25%);    
+    grid-template-columns: minmax(auto, 24.8%) minmax(auto, 24.8%) minmax(auto, 24.8%) minmax(auto, 24.8%);
+    grid-template-rows: minmax(auto, 24.6%) minmax(auto, 24.6%) minmax(auto, 24.6%) minmax(auto, 24.6%);    
 }
 img{
    width: 100%;
    height: 100%;
+   object-fit: cover;
 }
 .dog1{
     grid-column: 1 / 3;
