--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ svg{
     height: 100%;       
     display: grid;  
     grid-template-columns: minmax(auto, 24.8%) minmax(auto, 24.8%) minmax(auto, 24.8%) minmax(auto, 24.8%);
-    grid-template-rows: minmax(auto, 24.6%) minmax(auto, 24.6%) minmax(auto, 24.6%) minmax(auto, 24.6%);    
+    grid-template-rows: minmax(auto, 24.5%) minmax(auto, 24.5%) minmax(auto, 24.5%) minmax(auto, 24.5%);    
 }
 img{
    width: 100%;
@@ -129,7 +129,7 @@ span{
 @media screen and (max-width: 800px) {
     body{
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: minmax(390px, 1fr) 2fr;
     }    
     svg{        
         grid-row: 2 / 3;
@@ -165,7 +165,7 @@ span{
 @media screen and (max-width: 480px){
     body{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 100px;
+        grid-template-rows: minmax(240px, 1fr) 1fr 100px;
     }
     .collegeContainer, svg, .form{
         grid-column: 1;
